css/style.css
@font-face {
    /* TODO : fix font to be truly medium*/
    font-family: fontMedium;
    src: url(../assets/fonts/franklin_gothic-medium.ttf);
}
@font-face {
    font-family: fontHeavy;
    src: url(../assets/fonts/franklin_gothic-heavy.ttf);
}

:root {
    --black: #120707;
    --white: #FCFCFC;
    --blue: #0496FF;
    --header-width: 250px;
}

@media (max-width: 768px){
    :root {
        --header-width: 180px;
    }
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
    font-family: fontHeavy;
}

header, main, body {
    font-family: fontMedium;
}


.blue {
    color: var(--blue);
}

body {
    background-color: #fcfcfc;
}

.main_wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80vw;
    margin-left: 10vw;
    margin-right: 10vw;
}

@media (max-width: 768px){
    .main_wrapper {
        width: 100vw;
        margin-left: 0vw;
        margin-right: 0vw;
    }
}

header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100vh;
    width: var(--header-width);

    .logo {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        height: 90px;
        width: 100%;
        margin-bottom: 50px;
        margin-top: 10px;

        .logotype {

            width: calc(var(--header-width) - 80px);
            height: 100%;
            background-position: left;
            background-image: url(/assets/images/logo_animation.png);
            -webkit-mask-image: url(/assets/images/logo.png);
            mask-image: url(/assets/images/logo.png);
            -webkit-mask-repeat: no-repeat;
            mask-repeat: no-repeat;
            transition: 1.2s ease-in-out .3s;
        }

        .logotype:hover {
            background-position: right;
            cursor: cell;
        }
                
    }

    .navigation {
        
        width: 100%;
        height: 200px;

        nav {
            height: 100%;
            menu {
                display: flex;
                flex-direction: column;
                justify-content: space-between;
                align-items: flex-start;
                height: 100%;
                width: 100%;

                li {

                    span {
                        display: inline-block;
                        position: relative;
                        color: transparent;
                        left: -1ex;
                        transition: 0.2s;

                    }
                    a {
                        position: relative;
                        left: -1ex;
                        text-decoration: none;
                        color: var(--black);
                        transition: 0.2s;
                    }
                }

                li:hover {
                    color: var(--blue);

                    a {
                        color: var(--blue);
                        left: 1ex;
                    }

                    span {
                        display: inline-block;
                        position: relative;
                        color: var(--blue);
                        left: 0;
                    }
                }
                
            }
        }
    }

    .social {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100px;
        width: 100%;
        margin-top: auto;
    
        menu {
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
            width: 100%;
            padding-right: calc(var(--header-width) / 3);

            li {
                a {
                    svg {
                        path {
                            fill: var(--black);
                            transition: 0.2s;
                        }
                    }
                }

                a:hover {
                    svg {
                        path {
                            fill: var(--blue);
                        }
                    }
                }
            }
        }
    }
}


main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: calc(100% - var(--header-width));
}

li {
    font-size: 1.5em;
    color: #000;
    list-style: none;
}

h1 {
    font-size: 3em;
    font-family: fontHeavy;
    color: #000;
}

